--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,13 +33,34 @@
     outline: 0;
 }
 
-.button--alternate {
-    background-color: $mggg-blue;
+@mixin button {
+  border-radius: 0.25rem;
+  color: white;
+  font-family: inherit;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
 }
 
-.button--alternate:hover,
-.button--alternate:active {
-    background: $mggg-dark-blue;
+.button--alternate {
+  border: 2px solid #ffffff;
+  background: $mggg-blue;
+  @include button;
+
+  &:hover {
+    background-color: $mggg-dark_blue;
+    border: 2px solid #ff4f49;
+  }
+}
+
+.button--alternate--clicked {
+  background-color: $mggg-dark_blue;
+  border: 2px solid #ff4f49;
+  @include button;
 }
 
 .button--blank {
