--- a/sass/components/_toolbar.scss
+++ b/sass/components/_toolbar.scss
@@ -1,3 +1,4 @@
+
 @import "icon-list";
 @import "slider";
 @import "../mixins";
@@ -32,13 +33,17 @@
 
 .toolbar-inner {
   display: flex;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
   font-size: 0.8rem;
   text-align: justify;
 }
 
 .dataset-info > span {
   font-size: 0.6rem;
+}
+
+.dataset-info > p {
+  margin: 0;
 }
 
 .district-row {
